# crew-ai-author

./: pyproject.toml
novel_write_flow/: README.md  pyproject.toml
novel_write_flow/src/novel_write_flow/: main.py
novel_write_flow/src/novel_write_flow/crews/editing_polishing_crew/: editing_polishing_crew.py
novel_write_flow/src/novel_write_flow/crews/editing_polishing_crew/config/: agents.yaml  tasks.yaml
novel_write_flow/src/novel_write_flow/crews/research_ideation_crew/: research_ideation_crew.py
novel_write_flow/src/novel_write_flow/crews/research_ideation_crew/config/: agents.yaml  tasks.yaml
novel_write_flow/src/novel_write_flow/crews/writing_process_crew/: writing_process_crew.py
novel_write_flow/src/novel_write_flow/crews/writing_process_crew/config/: agents.yaml  tasks.yaml
novel_write_flow/src/novel_write_flow/tools/: __init__.py  research_tool.py  story_structure_tool.py  validation_tool.py
