[project]
name = "novel_write_flow"
version = "0.1.0"
description = "novel-write-flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
]

[project.scripts]
kickoff = "novel_write_flow.main:kickoff"
run_crew = "novel_write_flow.main:kickoff"
plot = "novel_write_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
